RESOLVED FIXED267721
[WGSL] webgpu:shader,execution,robust_access:* is crashing
https://bugs.webkit.org/show_bug.cgi?id=267721
Summary [WGSL] webgpu:shader,execution,robust_access:* is crashing
Tadeu Zagallo
Reported 2024-01-18 11:55:02 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-18 11:55:55 PST
Tadeu Zagallo
Comment 2 2024-01-18 12:00:07 PST
EWS
Comment 3 2024-01-19 08:25:24 PST
Committed 273220@main (8c2f912a0edf): <https://commits.webkit.org/273220@main> Reviewed commits have been landed. Closing PR #22932 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.