[WGSL] webgpu:shader,execution,robust_access:* is crashing https://bugs.webkit.org/show_bug.cgi?id=267721 rdar://121209161

Reviewed by Mike Wyrzykowski.

The global variable rewriter assumes that all global variables will have a reference
type, but the type checker was not creating reference types for variable that did not
have a type annotation, which is valid for global variables in the private address
space. This isn't enough to make the test pass, but it no longer crashes.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visitVariable):

Canonical link: https://commits.webkit.org/273220@main